# NP-2019

./: .gitignore
connect_four/: 4clib.c  4clib.h  CMakeLists.txt  Makefile.am  Socket.c  Socket.h  cblib.c  cblib.h  configure.ac  connect_four_client  connect_four_client.c  connect_four_lib.c  connect_four_lib.h  connect_four_server  connect_four_server.c  game.c  game.h  gameserver.c  gameserver.h  gameserver_client_list.c  gameserver_client_list.h  gameserver_msg_size.c  gameserver_msg_size.h  single_linked_list.c  single_linked_list.h
daytimeserver/: CMakeLists.txt  Makefile.am  Socket.c  Socket.h  config.status  configure.ac  daytime_server.c  daytime_server_udp.c
dns/: CMakeLists.txt  Makefile.am  Socket.c  Socket.h  configure.ac  getaddresses.c
tcp_examples/: CMakeLists.txt  Makefile.am  Socket.c  Socket.h  chargen_server.c  config.status  configure.ac  discard_server.c  echo_server.c  tcp_client.c  tcp_server.c
udp_examples/: .gitignore  CMakeLists.txt  Socket.c  config.status  echo_client  echo_client.c  echo_server  echo_server.c
udp_examples-1.1/: Socket.h  config.status  echo_client  echo_client.c  echo_server
udp_examples-base/: configure
