cmake_minimum_required(VERSION 2.8.9)
project (connect_four_server)
add_executable(connect_four_server connect_four_server.c Socket.c Socket.h cblib.h cblib.c connect_four_lib.c connect_four_lib.h single_linked_list.c single_linked_list.h gameserver.c gameserver.h game.h gameserver_client_list.c gameserver_client_list.h gameserver_msg_size.c gameserver_msg_size.h)
project (connect_four_client)
add_executable(connect_four_client connect_four_client.c Socket.c Socket.h 4clib.c 4clib.h cblib.c cblib.h connect_four_lib.c connect_four_lib.h)
TARGET_LINK_LIBRARIES(connect_four_client pthread)
TARGET_LINK_LIBRARIES(connect_four_server pthread)