bin_PROGRAMS        = tcp_client tcp_server discard_server echo_server chargen_server
tcp_client_SOURCES = tcp_client.c Socket.h Socket.c
tcp_server_SOURCES = tcp_server.c Socket.h Socket.c
discard_server_SOURCES = discard_server.c Socket.h Socket.c
echo_server_SOURCES = echo_server.c Socket.h Socket.c
chargen_server_SOURCES = chargen_server.c Socket.h Socket.c